Moved project images to online host

--- a/application/templates/BubbleMania.html
+++ b/application/templates/BubbleMania.html
@@ -2,7 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
+    <img class="project-intro-img" src="https://i.ibb.co/m0yc5yb/Logo.png" alt="">
     <h2>A Tile-Matching Arcade Puzzle Video Game</h2>
 {% endblock %}
 
@@ -73,8 +73,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                         </div>
-                        <a href="{% static 'images/BubbleMania/moving_intro.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/BubbleMania/moving_intro.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/tZWLBpY/moving-intro.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/tZWLBpY/moving-intro.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -85,8 +85,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                         </div>
-                        <a href="{% static 'images/BubbleMania/choose_theme.png' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/BubbleMania/choose_theme.png' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/F8xvF51/choose-theme.png" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/F8xvF51/choose-theme.png" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -103,8 +103,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                         </div>
-                        <a href="{% static 'images/BubbleMania/short_demo.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/BubbleMania/short_demo.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/3y6XvQy/short-demo.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/3y6XvQy/short-demo.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                         </div>
-                        <a href="{% static 'images/BubbleMania/score.PNG' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/BubbleMania/score.PNG' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/kJHG3zn/score.png" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/kJHG3zn/score.png" alt="subpage item">
                         </a>
                     </div>
                 </div>
