--- a/application/templates/GunmanJump.html
+++ b/application/templates/GunmanJump.html
@@ -2,7 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
+    <img class="project-intro-img" src="https://i.ibb.co/m0yc5yb/Logo.png" alt="">
     <h2>A Single/Multiplayer Platform Shooting Game</h2>
 {% endblock %}
 
@@ -65,8 +65,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                     </div>
-                    <a href="{% static 'images/GunmanJump/main_page.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/GunmanJump/main_page.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/Bf2PFKy/main-page.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/Bf2PFKy/main-page.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -83,8 +83,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                     </div>
-                    <a href="{% static 'images/GunmanJump/single_player.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/GunmanJump/single_player.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/HGxqjV7/single-player.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/HGxqjV7/single-player.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -95,8 +95,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                     </div>
-                    <a href="{% static 'images/GunmanJump/multi_player.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/GunmanJump/multi_player.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/T8DmhhX/multi-player.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/T8DmhhX/multi-player.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -112,8 +112,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                     </div>
-                    <a href="{% static 'images/GunmanJump/single_player_setup.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/GunmanJump/single_player_setup.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/FqPW6bs/single-player-setup.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/FqPW6bs/single-player-setup.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -122,8 +122,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                     </div>
-                    <a href="{% static 'images/GunmanJump/multi_player_setup.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/GunmanJump/multi_player_setup.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/0CRtZvH/multi-player-setup.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/0CRtZvH/multi-player-setup.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -138,8 +138,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div>
                     </div>
-                    <a href="{% static 'images/GunmanJump/leaderboard.png' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/GunmanJump/leaderboard.png' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/8rtB9yz/leaderboard.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/8rtB9yz/leaderboard.png" alt="subpage item">
                     </a>
                 </div>
             </div>
