--- a/application/templates/PocketTravel.html
+++ b/application/templates/PocketTravel.html
@@ -2,7 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
+    <img class="project-intro-img" src="https://i.ibb.co/m0yc5yb/Logo.png" alt="">
     <h2>A Geographical Information System (GIS) Application</h2>
 {% endblock %}
 
@@ -77,8 +77,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/levels_of_details.png' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/levels_of_details.png' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/xSNLyGk/levels-of-details.png" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/xSNLyGk/levels-of-details.png" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -95,8 +95,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location" id="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/change_map.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/change_map.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/z4wHCYg/change-map.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/z4wHCYg/change-map.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -107,8 +107,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/autocomplete.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/autocomplete.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/hVT6TqL/autocomplete.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/hVT6TqL/autocomplete.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/search_history.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/search_history.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/hF1S45r/search-history.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/hF1S45r/search-history.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -139,8 +139,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/direction_search.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/direction_search.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/m6GgYTR/direction-search.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/m6GgYTR/direction-search.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/directions_click.gif' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/directions_click.gif' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/104CtrQ/directions-click.gif" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/104CtrQ/directions-click.gif" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -161,8 +161,8 @@
                     <div class="titlebar">
                         <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                     </div>
-                    <a href="{% static 'images/PocketTravel/hover_mouse.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/PocketTravel/hover_mouse.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/gt7fQ84/hover-mouse.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/gt7fQ84/hover-mouse.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -174,8 +174,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Tokyo, Japan</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/subway.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/subway.jpg' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/dmmmwSt/subway.jpg" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/dmmmwSt/subway.jpg" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -184,8 +184,8 @@
                         <div class="titlebar">
                             <div class="dot closes"></div><div class="dot minimise"></div><div class="dot maximise"></div><div class="location">Toronto, Canada</div>
                         </div>
-                        <a href="{% static 'images/PocketTravel/subway_icons.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img class="desc-image" src="{% static 'images/PocketTravel/subway_icons.jpg' %}" alt="subpage item">
+                        <a href="https://i.ibb.co/q5YyJVB/subway-icons.jpg" class="fancybox" rel="ligthbox">
+                            <img class="desc-image" src="https://i.ibb.co/q5YyJVB/subway-icons.jpg" alt="subpage item">
                         </a>
                     </div>
                 </div>
@@ -200,21 +200,21 @@
             <p>For multi-destination planning, we first used a greedy approach, chosing a random starting point and using the A* algorithm to fetch the nearest destination as the next point to visit, until we visit all the destinations. However, the paths we obtained from this approach are not good enough because it always gets stuck at a local minimum, so we wanted to <mark>find a way to jump out of local minimum and eventually reach the global minimum</mark>.</p>
             <div class="row section-element">
                 <div class="col-lg-6 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/PocketTravel/greedy.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/PocketTravel/greedy.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/HngDbNW/greedy.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/HngDbNW/greedy.gif" alt="subpage item">
                     </a>
                 </div>
             </div>
             <p>Once an “optimal” path is found from greedy, using 2-opt, we cut the path into 3 pieces and then we reconnect the three path segments. We created <mark>12 different types of recombination in total. In addition to this, we also implemented simulated annealing</mark>. At first the temperature is high, and it will accept the solution in a large range, so the possibility of getting a worse solution than the local minimum is high. However, the temperature will adjust and decrease over time ,so that it will gradually narrow down to near where the global minimum is.</p>
             <div class="row section-element">
                 <div class="col-lg-6 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/PocketTravel/2opt.gif' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/PocketTravel/2opt.gif' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/Scchx8R/2opt.gif" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/Scchx8R/2opt.gif" alt="subpage item">
                     </a>
                 </div>
                 <div class="col-lg-6 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/PocketTravel/annealing.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/PocketTravel/annealing.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/vQfPhgw/annealing.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/vQfPhgw/annealing.png" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -222,8 +222,8 @@
             <p>To further optimize for the final competition, we chose to implement multi-start with multithread. Since we were running on a 8-core processor for the competition portion of this project, we decided to <mark>choose the best 8 solutions obtained from the greedy search, loop through each as a candidate starting point on a separate thread, then so two-opt and simulated annealing simultaneously on each candidate</mark>.</p>
             <div class="row section-element">
                 <div class="col-lg-6 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/PocketTravel/multithread.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/PocketTravel/multithread.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/VDR7D3G/multithread.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/VDR7D3G/multithread.png" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -233,8 +233,8 @@
             <p>By implementing 2-opt and simulated annealing, this resulted in an average of <mark>8196 seconds traveling time decrease for the paths found</mark>. By using multi-start and multithreading, we ended up with an <mark>additional improvement of 4422 seconds decrease in average traveling time</mark>.</p>
             <div class="row section-element">
                 <div class="col-lg-6 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/PocketTravel/multithread_improvement.png' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/PocketTravel/multithread_improvement.png' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/JRBQQff/multithread-improvement.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/JRBQQff/multithread-improvement.png" alt="subpage item">
                     </a>
                 </div>
             </div>
