--- a/application/templates/ReversiAI.html
+++ b/application/templates/ReversiAI.html
@@ -2,7 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
+    <img class="project-intro-img" src="https://i.ibb.co/m0yc5yb/Logo.png" alt="">
     <h2>A Reversi (Orthello) Chess Game AI</h2>
 {% endblock %}
 
@@ -61,18 +61,18 @@
             </p>
             <div class="row section-element">
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/initial_board.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/initial_board.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/ZdF1NpS/initial-board.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/ZdF1NpS/initial-board.png" alt="subpage item">
                     </a>
                 </div>
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/white_canidate.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/white_canidate.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/cTLBsp2/white-canidate.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/cTLBsp2/white-canidate.png" alt="subpage item">
                     </a>
                 </div>
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/white_first_move.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/white_first_move.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/6Zc85jZ/white-first-move.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/6Zc85jZ/white-first-move.png" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -83,18 +83,18 @@
             </p>
             <div class="row section-element">
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/black_canidate.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/black_canidate.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/nz9wyh9/black-canidate.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/nz9wyh9/black-canidate.png" alt="subpage item">
                     </a>
                 </div>
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/black_first_move.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/black_first_move.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/m8mnTjV/black-first-move.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/m8mnTjV/black-first-move.png" alt="subpage item">
                     </a>
                 </div>
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/white_second_move.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/white_second_move.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/sy0Zg3y/white-second-move.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/sy0Zg3y/white-second-move.png" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -124,15 +124,15 @@
                     <p><mark>Corners are the best spots!</mark> Once a player takes over a corner, the opponent can never flip that piece, and the player can also use it to trap the opponent’s pieces along three directions. Similarly, <mark>the three spots directly adjacent to each corner are the worst spots</mark> because they can lead the opponent to the corners. Taking advantage of these cases, I made an array of factors to represent how favorable each spot on the board is, as shown on the right.</p>
                 </div>
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/factor_board.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/factor_board.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/k4qqgrt/factor-board.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/k4qqgrt/factor-board.png" alt="subpage item">
                     </a>
                 </div>
             </div>
             <div class="row section-element">
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/score_before_factor.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/score_before_factor.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/wdCmKvb/score-before-factor.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/wdCmKvb/score-before-factor.png" alt="subpage item">
                     </a>
                 </div>
                 <div class="col-lg-8 my-auto vertical-center">
@@ -144,8 +144,8 @@
                     <p>Now, multiply each score by its corresponding factor, and we will be able to differentiate between the choices. <mark>In this case, the top right corner is the best choice</mark>.</p>
                 </div>
                 <div class="col-lg-4 my-auto">
-                    <a href="{% static 'images/ReversiAI/score_after_factor.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/score_after_factor.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/TYXg5wX/score-after-factor.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/TYXg5wX/score-after-factor.png" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -154,8 +154,8 @@
             <p>After some initial research, I decided to implement the minmax algorithm for better decision making. At each move, my algorithm computes for <mark>both its own possibilities and the opponent's next best move to predict four steps ahead</mark>. The process is better described in the diagram below.</p>
             <div class="row section-element">
                 <div class="col-lg-8 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/ReversiAI/minmax.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/minmax.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/BVv8fQR/minmax.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/BVv8fQR/minmax.png" alt="subpage item">
                     </a>
                 </div>
             </div>
@@ -166,8 +166,8 @@
             </p>
             <div class="row section-element">
                 <div class="col-lg-7 my-auto" style="margin: 20px auto;">
-                    <a href="{% static 'images/ReversiAI/alphabeta.PNG' %}" class="fancybox" rel="ligthbox">
-                        <img class="desc-image" src="{% static 'images/ReversiAI/alphabeta.PNG' %}" alt="subpage item">
+                    <a href="https://i.ibb.co/DYZhJj1/alphabeta.png" class="fancybox" rel="ligthbox">
+                        <img class="desc-image" src="https://i.ibb.co/DYZhJj1/alphabeta.png" alt="subpage item">
                     </a>
                 </div>
             </div>
